pod日志采集（ELK方案）/kafka/kafka-ui.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kafka-ui.local.com`)
      kind: Rule
      services:
        - name: kafka-ui # 与svc的name一致
          port: 80 # 与svc的port一致
# helm install kafka-ui kafka-ui/kafka-ui -n kafka --set existingConfigMap="kafka-ui-helm-values"
